--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,5 +6,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "zod": "^3.23.8"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
