--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
@@ -10,8 +11,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module", 
-  "devDependencies": {},
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
