--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
     "three": "^0.169.0"
