--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,58 +1,36 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "src/main.jsx",
   "scripts": {
-    "dev": "vite",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "debug": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.8",
     "axios": "^1.7.7",
-    "buffer": "^6.0.3",
-    "jwt-decode": "^4.0.0",
+    "core-js": "^3.39.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
-    "react-router-dom": "^6.26.2",
-    "react-tsparticles": "^2.12.2",
-    "three": "^0.169.0",
-
-"process": "^0.11.10",
-"stream-browserify": "^3.0.0",
-"react-app-rewired": "^2.2.1" 
+    "react-router-dom": "^6.28.0",
+    "react-scripts": "^5.0.1",
+    "three": "^0.170.0"
   },
-  "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "i": "^0.3.7",
-    "npm": "^10.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.1",
-    "vite-plugin-node-polyfills": "^0.22.0"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
